# ai-coding-setup

./: .gitignore  DEMO.md  INSTALL.md  MAINTAINING.md  PLATFORM_SETUP.md  PLAYBOOK.md  README.md  SETUP.md
claude-code/: .gitignore  .mcp.json  CLAUDE.md
codex/: AGENTS.md  PROJECT.md  config.toml
codex/prompts/: brainstorm.md  checkpoint.md  code-review.md  debug.md  freshcheck.md  frontend-design.md  implement.md  migration.md  onboarding.md  performance.md  plan.md  pr-review.md  profile.md  refactor.md  review.md  start.md  tdd.md  ui.md
docs/: DEPENDENCY-SECURITY.md  INSTALL-SKILL-STACK-PROMPT.md  PROMPTING-TECHNIQUES.md  ROUTER-OPTIONS.md  TECHNICAL-STANDARDS.md  WORKFLOW-STACK.md
docs/specs/: 2026-06-01-codex-setup-tolaria-design.md
opencode/: AGENTS.md  PROJECT.md  opencode.json
optional-recipies/: good-practices.md  performance.md  security.md  ui.md
pi/: AGENTS.md  PROJECT.md  README.md
pi-dev/: README.md
pi-dev/prompts/: freshcheck.md  security.md  spec.md  testplan.md
skills/brainstorm/: SKILL.md
skills/code-review/: SKILL.md
skills/debug/: SKILL.md
skills/frontend-design/: SKILL.md
skills/migration/: SKILL.md
skills/onboarding/: SKILL.md
skills/plan/: SKILL.md
skills/pr-review/: SKILL.md
skills/profile/: SKILL.md
skills/refactor/: SKILL.md
skills/tdd/: SKILL.md
templates/nextjs-fastapi/: .dockerignore  Dockerfile  README.md
templates/nextjs-fastapi/apps/api/: pyproject.toml
templates/nextjs-fastify/: .dockerignore  (+4 more)
workflows/: dependency-update.md  incident.md  onboard.md  performance.md  refactor.md  review.md
(+69 files in other folders)
