[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]",
]

[dependency-groups]
dev = [
  "httpx",
  "pip-audit",
  "pytest",
  "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
